Restructure workspace, add Docker deployment, and remove hardcoded OAuth secrets

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Server
+PORT=3000
+NODE_ENV=production
+
+# Public URL (used to auto-build Google callback URL if GOOGLE_CALLBACK_URL is empty)
+# Example: https://kanban.example.de
+PUBLIC_BASE_URL=http://localhost:3000
+
+# Google OAuth
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
-GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+
+# Optional override. Leave empty to use: PUBLIC_BASE_URL + /auth/google/callback
+GOOGLE_CALLBACK_URL=
